syntax = "proto3";
package crescent.mint.v1beta1;

option go_package = "github.com/crescent-network/crescent/v4/x/mint/types";

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// Params holds parameters for the mint module.
message Params {
  // mint_denom defines denomination of coin to be minted
  string mint_denom = 1;

  // mint_pool_address defines the address where inflation will be minted. The default is FeeCollector,
  // but if it is set to FeeCollector, minted inflation could be mixed together with collected tx fees.
  // Therefore, it is recommended to specify a separate address depending on usage.
  string mint_pool_address = 2;

  // block_time_threshold defines block time threshold to prevent from any inflationary manipulation attacks
  // it is used for maximum block duration when calculating block inflation
  google.protobuf.Duration block_time_threshold = 3 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];

  // inflation_schedules defines a list of inflation schedules
  repeated InflationSchedule inflation_schedules = 4 [(gogoproto.nullable) = false];
}

// InflationSchedule defines the start and end time of the inflation period, and the amount of inflation during that
// period.
message InflationSchedule {
  // start_time defines the start date time for the inflation schedule
  google.protobuf.Timestamp start_time = 1
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"start_time\""];
  // end_time defines the end date time for the inflation schedule
  google.protobuf.Timestamp end_time = 2
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"end_time\""];
  // amount defines the total amount of inflation for the schedule
  string amount = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}
